# numbers

./: README.md  pyproject.toml
playground/: primes.ipynb
src/: euler.py  fractals.py  primes.py
src/utils/: viewport.py
