[tool.poetry]
name = "numbers"
version = "0.1.0"
description = "Math resources by RHS"
authors = ["Ricardo Hortelano <ricardo.hortelano@gmail.com>"]
license = "GNUv3"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
